@@ -26,11 +26,13 @@ import io.camunda.connector.api.secret.SecretProvider;
 import io.camunda.connector.feel.annotation.FEEL;
 import io.camunda.connector.runtime.core.FooBarSecretProvider;
 import io.camunda.connector.runtime.core.inbound.InboundConnectorContextImplTest.TestPropertiesClass.InnerObject;
-import io.camunda.connector.runtime.core.inbound.correlation.MessageCorrelationPoint;
 import io.camunda.connector.runtime.core.inbound.correlation.MessageCorrelationPoint.StandaloneMessageCorrelationPoint;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 
 class InboundConnectorContextImplTest {
@@ -40,15 +42,7 @@ class InboundConnectorContextImplTest {
   @Test
   void bindProperties_shouldThrowExceptionWhenWrongFormat() {
     // given
-    InboundConnectorElementImpl definition =
-        new InboundConnectorElementImpl(
-            Map.of("stringMap", "={{\"key\":\"value\"}"),
-            new StandaloneMessageCorrelationPoint("", "", null),
-            "bool",
-            0,
-            0L,
-            "id",
-            "");
+    var definition = getInboundConnectorDefinition(Map.of("stringMap", "={{\"key\":\"value\"}"));
     InboundConnectorContextImpl inboundConnectorContext =
         new InboundConnectorContextImpl(
             secretProvider,
@@ -69,15 +63,7 @@ class InboundConnectorContextImplTest {
   @Test
   void bindProperties_shouldParseNullValue() {
     // given
-    InboundConnectorElementImpl definition =
-        new InboundConnectorElementImpl(
-            Map.of("stringMap", "={\"keyString\":null}"),
-            new MessageCorrelationPoint("", "", null),
-            "bool",
-            0,
-            0L,
-            "id",
-            "");
+    var definition = getInboundConnectorDefinition(Map.of("stringMap", "={\"keyString\":null}"));
     InboundConnectorContextImpl inboundConnectorContext =
         new InboundConnectorContextImpl(
             secretProvider,
@@ -93,22 +79,16 @@ class InboundConnectorContextImplTest {
     // then
     assertThat(propertiesAsType.getStringMap().containsKey("keyString")).isTrue();
     assertThat(propertiesAsType.getStringMap().get("keyString")).isNull();
-    System.out.println(propertiesAsType.getMapWithStringListWithNumbers());
   }
 
   @Test
   void bindProperties_shouldParseStringAsString() {
     // given
-    InboundConnectorElementImpl definition =
-        new InboundConnectorElementImpl(
+    var definition =
+        getInboundConnectorDefinition(
             Map.of(
-                "mapWithStringListWithNumbers", "={key:[\"34\", \"45\", \"890\",\"0\",\"16785\"]}"),
-            new MessageCorrelationPoint("", "", null),
-            "bool",
-            0,
-            0L,
-            "id",
-            "");
+                "mapWithStringListWithNumbers",
+                "={key:[\"34\", \"45\", \"890\",\"0\",\"16785\"]}"));
     InboundConnectorContextImpl inboundConnectorContext =
         new InboundConnectorContextImpl(
             secretProvider,
@@ -122,15 +102,32 @@ class InboundConnectorContextImplTest {
     TestPropertiesClass propertiesAsType =
         inboundConnectorContext.bindProperties(TestPropertiesClass.class);
     // then
-    assertThat(propertiesAsType.getMapWithStringListWithNumbers().get("key").get(0))
+    assertThat(propertiesAsType.getMapWithStringListWithNumbers().get("key").getFirst())
         .isInstanceOf(String.class);
+  }
+
+  @NotNull
+  private static InboundConnectorDefinitionImpl getInboundConnectorDefinition(
+      Map<String, String> properties) {
+    properties = new HashMap<>(properties);
+    properties.put("inbound.type", "io.camunda:connector:1");
+    InboundConnectorElementImpl element =
+        new InboundConnectorElementImpl(
+            properties,
+            new StandaloneMessageCorrelationPoint("", "", null),
+            "bool",
+            0,
+            0L,
+            "id",
+            "");
+    return new InboundConnectorDefinitionImpl(Collections.singletonList(element));
   }
 
   @Test
   void bindProperties_shouldParseAllObject() {
     // Given
-    InboundConnectorElementImpl definition =
-        new InboundConnectorElementImpl(
+    var definition =
+        getInboundConnectorDefinition(
             Map.of(
                 "stringMap",
                 "={\"keyString\":\"valueString\"}",
@@ -151,13 +148,7 @@ class InboundConnectorContextImplTest {
                 "stringNumberList",
                 "=[\"34\", \"-45\", \"890\", \"0\", \"-16785\"]",
                 "stringObjectMap",
-                "={\"innerObject\":{\"stringList\":[\"innerList\"], \"bool\":true}}"),
-            new MessageCorrelationPoint("", "", null),
-            "bool",
-            0,
-            0L,
-            "id",
-            "");
+                "={\"innerObject\":{\"stringList\":[\"innerList\"], \"bool\":true}}"));
     InboundConnectorContextImpl inboundConnectorContext =
         new InboundConnectorContextImpl(
             secretProvider,
@@ -177,15 +168,7 @@ class InboundConnectorContextImplTest {
   @Test
   void getProperties_shouldNotParseFeel() {
     // given
-    InboundConnectorElementImpl definition =
-        new InboundConnectorElementImpl(
-            Map.of("stringMap", "={\"keyString\":null}"),
-            new MessageCorrelationPoint("", "", null),
-            "bool",
-            0,
-            0L,
-            "id",
-            "");
+    var definition = getInboundConnectorDefinition(Map.of("stringMap", "={\"keyString\":null}"));
 
     InboundConnectorContextImpl inboundConnectorContext =
         new InboundConnectorContextImpl(
@@ -282,7 +265,7 @@ class InboundConnectorContextImplTest {
       this.bool = bool;
     }
 
-    record InnerObject(List<String> stringList, boolean bool) {}
+    public record InnerObject(List<String> stringList, boolean bool) {}
 
     @Override
     public boolean equals(final Object o) {
